--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SPA en Construcción</title>
+  <title>SPA de matias buonaventura</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <nav>
-    <a href="#home">Inicio</a>
+    <a href="#home">Inicio aaaaaa</a>
     <a href="#carrusel">Carrusel</a>
     <a href="#estructura">Estructura</a>
   </nav>
